and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Removed
- [JAILS] remove now-useless mkjail-* scripts
- [BASE_SUDOERS] mentions of mkjail-*
### Changed
- [SCRIPTS] Update Redis/Sentinel's announce-ip through redis commands when changing Vulture management IP
- [SYSTEM] [CSHRC] Add usefull keyboard bindings
### Fixed
- [CLUSTER_JOIN] Fix wrong ca.key after cluster_join


## [2.1.8] - 2024-01-10
### Removed
- [UPDATE_SYSTEM] Don't upgrade/restart Darwin service specifically
### Changed
- [MISC] Some code cleanups and minor fixes
### Fixed
- [UPDATE_SYSTEM] Avoid linker errors during pkg upgrades by deactivating harden_rtld during upgrade


## [2.1.7] - 2023-09-12
### Fixed
- [UPGRADE_TO_13] Put the Node into MAINTENANCE mode during upgrades
- [UPGRADE_TO_13] Ensure Node is completely restarted before continuing


## [2.1.6] - 2023-08-22
### Added
- [UPDATE_SYSTEM] Updating toggle maintenance
- [RSYSLOG_TEMPLATES] bulkid-template for ELS datastream support
### Fixed
- [UPGRADE_TO_13] Motd template
- [UPDATE_SYSTEM] Force maintenance state during update


## [2.1.5] - 2023-07-20
### Added
- [UPDATE_SYSTEM] Add timestamps in logs when starting/stopping an upgrade
### Changed
- [HAPROXY] [RSYSLOG_TEMPLATES] Update templates to use new <name>_json versions
### Removed
- [SYSCTL] Obsolete parameter 'net.inet.ip.rfc1122_strong_es'


## [2.1.4] - 2023-07-11
### Fixed
- [PROXY.SH] Remove scheme from provided proxy value


## [2.1.3] - 2023-07-10
### Changed
- [UPDATE_SYSTEM] Lock/unlock vulture packages between upgrades
- [UPDATE_SYSTEM] Properly stop crontabs during upgrades
### Fixed
- [UPDATE_SYSTEM] Ensure secadm version stays up-to-date with the kernel version
- [UPGRADE_TO_13] Use Boot Environments to have a safer upgrade


## [2.1.2] - 2023-05-24
### Fixed
- [UPGRADE_TO_13] Use a Boot Environment to avoid problems during system upgrade
### Changed