@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Changed
 - [SCRIPTS] Update Redis/Sentinel's announce-ip through redis commands when changing Vulture management IP
 - [SYSTEM] [CSHRC] Add usefull keyboard bindings
+- [UPDATE_SYSTEM] Stop vultured service during upgrades
 ### Fixed
 - [CLUSTER_JOIN] Fix wrong ca.key after cluster_join
 
